<resources>
    <string name="app_name">WordClue</string>
    <string name="app_title">Word Clue</string>
    <string name="meaning_button">Meaning</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_main2">History</string>
    <string name="title_activity_settings_activityr">Settings</string>
    <string name="pref_lang_label">Languages</string>
    <string name="pref_lang_key">Languages</string>
    <string name="default_value">en-en</string>
    <string name="contdesc_speak">Speak word in text field</string>
    <string name="contdesc_input">Input word to the text field</string>
    <string name="contdesc_signin">Sign in your Google Account</string>
    <string name="contdesc_meaning">Meaning of the word</string>
    <string name="bullet">\u2022</string>
    <string name="contdesc_logout">Logout out of your Google Account</string>
    <string name="NoResult">Result Not Found.</string>


    <string name="pref_lang_label_English">English</string>
    <string name="pref_lang_label_Russian">Russian</string>
    <string name="pref_lang_label_French">French</string>
    <string name="pref_lang_label_Spanish">Spanish</string>
    <string name="pref_lang_label_German">German</string>


    <string name="pref_unit_English">en-en</string>
    <string name="pref_unit_Russian">en-ru</string>
    <string name="pref_unit_French">en-fr</string>
    <string name="pref_unit_Spanish">en-es</string>
    <string name="pref_unit_German">en-de</string>

    <string name="widget_text">
        WordClue supports these languages\n

    </string>
    <string name="widget_text1">
        • English\n
        • Russian\n
        • French\n
        • Spanish\n
        • German
    </string>

    <string name="title_activity_scrolling">hello</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Result</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="loading">loading</string>


</resources>
