<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="com.example.warmachine.myapplication.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl1"
        >

     <TextView
         android:layout_margin="20dp"
         android:paddingTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/app_title"
         android:textSize="50dp"
         android:gravity="center_horizontal"
         android:id="@+id/tv1"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:weightSum="10"
            >

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:layout_weight="8"
/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:id="@+id/b2"
                android:src="@drawable/speak"
                android:background="@color/white"
                android:contentDescription="@string/contdesc_speak"
                />
        </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contdesc_input"
        android:src="@drawable/mikke"
        android:elevation="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/button"
        android:layout_alignParentRight="true"
         />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Meaning"
            android:text="@string/meaning_button"
            android:layout_alignParentBottom="true"
            android:fitsSystemWindows="true"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/button" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sb"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/sb" />

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:text="@string/logout"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sb"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/sb"/>

    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/ss"
        android:layout_centerInParent="true"
        />


</RelativeLayout>



